Add file for backup

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,15 @@
     "\n",
     "from datetime import datetime \n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import classification_report, precision_recall_fscore_support"
    ]
   },
   {
@@ -2742,80 +2750,437 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Modeling\n",
+    "# Data Modeling and Evaluation\n",
     "\n",
-    "In this part I will use machine learning techniques to predict the response of the customers, using the demographic information and offer types in the dataset."
+    "In this part I will use machine learning techniques to predict the response of the customers. \n",
+    "\n",
+    "As I am predicting whether or not a customer will respond to offers, it seems like logistic regression is a proper way for this purpose. Specifically, I will build a machine learning pipeline to chain a PCA and a logistic regression.\n",
+    "\n",
+    "Based on the previous analysis, I decide to select the following features to fit the model based on the previous analysis: income, join_time (became_member_on), gender, offer type, age, and channels. Although age didn't show strong relathionships with the response rate, I would first include it in the model and then see how the model performs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Write a function to prepare X and y \n",
+    "def prepare_data(df=df):\n",
+    "    '''\n",
+    "    INPUT - a dataframe df to draw our X and y from\n",
+    "    OUTPUT - X and y, two dataframes for the following modeling\n",
+    "    '''\n",
+    "    # Create X and Y for the modeling\n",
+    "    subset = df.drop(['time_offer_received', 'customer_id', 'offer_id', 'time_offer_viewed',\n",
+    "           'time_offer_completed', 'time_transaction', 'amount'], axis=1)\n",
+    "\n",
+    "    # Drop the rows with missing data, which are rows for customers who didn't receive an offer as discussed before\n",
+    "    subset = subset.dropna()\n",
+    "\n",
+    "    X = subset.drop('responded', axis=1)\n",
+    "    y = subset['responded']\n",
+    "    \n",
+    "    # Create dummy variables for categorical features\n",
+    "    join_time_cat = pd.get_dummies(X['became_member_on'], drop_first=True)\n",
+    "    gender_cat = pd.get_dummies(X['gender'], drop_first=True)\n",
+    "    offer_type_cat = pd.get_dummies(X['offer_type'], drop_first=True)\n",
+    "\n",
+    "    # Concat the dummy columns to X\n",
+    "    X_1 = pd.concat([X, join_time_cat], axis=1).drop('became_member_on', axis=1)\n",
+    "    X_2 = pd.concat([X_1, gender_cat], axis=1).drop('gender', axis=1)\n",
+    "    X = pd.concat([X_2, offer_type_cat], axis=1).drop('offer_type', axis=1)\n",
+    "\n",
+    "    return X, y"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Call the prepare_data function to create X and y\n",
+    "X, y = prepare_data()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Split the data to train and test data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build a machine learning pipeline to chain a PCA and a logistic regression for the prediction\n",
+    "logistic = SGDClassifier(loss='log', penalty='l2', early_stopping=True,\n",
+    "                         max_iter=10000, tol=1e-5, random_state=0)\n",
+    "pca = PCA()\n",
+    "pipeline = Pipeline(steps=[('pca', pca), ('logistic', logistic)])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 367,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('pca',\n",
+       "                 PCA(copy=True, iterated_power='auto', n_components=None,\n",
+       "                     random_state=None, svd_solver='auto', tol=0.0,\n",
+       "                     whiten=False)),\n",
+       "                ('logistic',\n",
+       "                 SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "                               early_stopping=True, epsilon=0.1, eta0=0.0,\n",
+       "                               fit_intercept=True, l1_ratio=0.15,\n",
+       "                               learning_rate='optimal', loss='log',\n",
+       "                               max_iter=10000, n_iter_no_change=5, n_jobs=None,\n",
+       "                               penalty='l2', power_t=0.5, random_state=0,\n",
+       "                               shuffle=True, tol=1e-05, validation_fraction=0.1,\n",
+       "                               verbose=0, warm_start=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 367,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit the pipeline \n",
+    "pipeline.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Predict\n",
+    "y_pred_1 = pipeline.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Try to improve the model by using GridSearchCV\n",
+    "param = {\n",
+    "    'pca__n_components': [2, 8, 14, 18],\n",
+    "    'logistic__alpha': np.logspace(-4, 4, 5)\n",
+    "}\n",
+    "search = GridSearchCV(pipeline, param, iid=False, cv=5, n_jobs=4, verbose=2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 371,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:  2.6min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "             estimator=Pipeline(memory=None,\n",
+       "                                steps=[('pca',\n",
+       "                                        PCA(copy=True, iterated_power='auto',\n",
+       "                                            n_components=None,\n",
+       "                                            random_state=None,\n",
+       "                                            svd_solver='auto', tol=0.0,\n",
+       "                                            whiten=False)),\n",
+       "                                       ('logistic',\n",
+       "                                        SGDClassifier(alpha=0.0001,\n",
+       "                                                      average=False,\n",
+       "                                                      class_weight=None,\n",
+       "                                                      early_stopping=True,\n",
+       "                                                      epsilon=0.1, eta0=0.0,\n",
+       "                                                      fit_intercept=True,\n",
+       "                                                      l1_ratio=0....\n",
+       "                                                      n_jobs=None, penalty='l2',\n",
+       "                                                      power_t=0.5,\n",
+       "                                                      random_state=0,\n",
+       "                                                      shuffle=True, tol=1e-05,\n",
+       "                                                      validation_fraction=0.1,\n",
+       "                                                      verbose=0,\n",
+       "                                                      warm_start=False))],\n",
+       "                                verbose=False),\n",
+       "             iid=False, n_jobs=4,\n",
+       "             param_grid={'logistic__alpha': array([1.e-04, 1.e-02, 1.e+00, 1.e+02, 1.e+04]),\n",
+       "                         'pca__n_components': [2, 8, 14, 18]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=2)"
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit the grid search model \n",
+    "search.fit(X_train, y_train)\n",
+    "\n",
+    "# Use the grid search model to predict\n",
+    "y_pred_2 = search.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 386,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.63      0.41      0.50    163577\n",
+      "           1       0.52      0.72      0.60    142648\n",
+      "\n",
+      "    accuracy                           0.56    306225\n",
+      "   macro avg       0.57      0.57      0.55    306225\n",
+      "weighted avg       0.58      0.56      0.55    306225\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the grid search model\n",
+    "print(classification_report(y_pred_1, y_test))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 387,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.68      0.41      0.51    180649\n",
+      "           1       0.46      0.73      0.56    125576\n",
+      "\n",
+      "    accuracy                           0.54    306225\n",
+      "   macro avg       0.57      0.57      0.54    306225\n",
+      "weighted avg       0.59      0.54      0.53    306225\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the grid search model\n",
+    "print(classification_report(y_pred_2, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameter (CV score=0.554):\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print out the best \n",
+    "print(\"Best parameter (CV score=%0.3f):\" % search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using grid search slightly increased the weighted average precision of the model from 0.59 to 0.59, which is not ideal. There are a few possible ways to improve the performance of the model, including trying other algorithms and add more features. I will try the LogisticRegression algorithm and see if ti can improve the performance or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build a pipeline to chain a PCA and a logistic regression for the prediction\n",
+    "logistic = LogisticRegression()\n",
+    "pca = PCA()\n",
+    "pipeline = Pipeline(steps=[('pca', pca), ('logistic', logistic)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 404,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train, y_train)\n",
+    "y_pred_3 = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.60      0.81      0.69     80682\n",
+      "           1       0.92      0.81      0.86    225543\n",
+      "\n",
+      "    accuracy                           0.81    306225\n",
+      "   macro avg       0.76      0.81      0.78    306225\n",
+      "weighted avg       0.84      0.81      0.82    306225\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the grid search model\n",
+    "print(classification_report(y_pred_3, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use GridSearchCV\n",
+    "param = {'pca__n_components': [2, 8, 14, 18], \n",
+    "         'logistic__C': [0.1, 10.]}\n",
+    "\n",
+    "search = GridSearchCV(pipeline, param, iid=False, cv=5, n_jobs=4, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 8 candidates, totalling 40 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:  1.7min\n",
+      "[Parallel(n_jobs=4)]: Done  40 out of  40 | elapsed:  2.1min finished\n",
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit the grid search model \n",
+    "search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the grid search model to predict\n",
+    "y_pred_4 = search.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.55      0.85      0.67     69554\n",
+      "           1       0.95      0.79      0.86    236671\n",
+      "\n",
+      "    accuracy                           0.81    306225\n",
+      "   macro avg       0.75      0.82      0.76    306225\n",
+      "weighted avg       0.86      0.81      0.82    306225\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the grid search model\n",
+    "print(classification_report(y_pred_4, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using LogisticRegression instead of SGDClassifier, with the combination of GridSearchCV, the performance of the model was improved from 0.58 to 0.86, which is quite an improvement. This shows the importance of algorithm selection in modeling. By trying out other suitable algorithms, the performance of the model might be able to further improved. However, for now, I am happy with the improvement and move on with deploying the project by putting up the findings into a blog post on Medium."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deployment / Communications\n",
+    "\n",
+    "The findings of the above analysis will be put together into a blog post on Medium."
+   ]
   },
   {
    "cell_type": "code",
