Add files for submission

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -2462,7 +2462,7 @@
     }
    ],
    "source": [
-    "# Note that responded = 1 means responded and responded =0 means the customer didn't respond\n",
+    "# Note that responded = 1 means responded and responded = 0 means the customer didn't respond\n",
     "\n",
     "# Response rate in different demographic groups\n",
     "age_mean = df.groupby('responded').age.mean()\n",
@@ -2615,7 +2615,7 @@
     }
    ],
    "source": [
-    "# The mean of income and age in different response groups\n",
+    "# The mean age and income in different response groups\n",
     "fig, axis = plt.subplots(1, 2)\n",
     "plt.subplots_adjust(wspace=0.4, hspace=0.4, top=1.0, right=1.5)\n",
     "\n",
@@ -2786,7 +2786,7 @@
     }
    ],
    "source": [
-    "# The relationship between income, age, offer types, and response \n",
+    "# The relationship between income, age, channels, and response \n",
     "fig, axis = plt.subplots(1, 2)\n",
     "plt.subplots_adjust(wspace=0.4, hspace=0.4, top=1.0, right=1.8)\n",
     "\n",
@@ -2905,7 +2905,7 @@
     }
    ],
    "source": [
-    "# The amount of money spent by customers of different income and ages\n",
+    "# The amount of money spent by customers with different income and ages\n",
     "fig, axis = plt.subplots(1, 2)\n",
     "plt.subplots_adjust(wspace=0.4, hspace=0.4, top=1.0, right=2.0)\n",
     "\n",
@@ -2999,29 +2999,6 @@
     "- **Channels**\n",
     "\n",
     "Different channels didn't seem to affect the amount of money spent, with customers from all channels having a mean of about 15 dollars. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusions and Suggestions\n",
-    "\n",
-    "In order to increase revenues, it makes sense for the company to promote the response rate, because people who responded indeed seemed to spend more than those who didn't respond. Particularly, the response rate could be improved through two aspects, including (1) identify customers with certain demographic features and (2) customize offers for different demographic groups by adjusting offer types and channels to deliver the offers.\n",
-    "\n",
-    "**Demographic features**\n",
-    "\n",
-    "The company might want to primarily focus on female customers and people with higher income. They are more responsive to offers and they also spend more than other. \n",
-    "\n",
-    "Age didn't seem to be a good indicator for either the response rate or amount of money spent according to the data, although the company might want to consider that peole around 55-65 spend more on average when constructing strategies. \n",
-    "\n",
-    "Finally, people who became members during 2015-2017 responed more and spent more than those who became member in other years, suggesting that the company might want to investigate into what made these three years different from other years. Were there new markets developed or were there any strategies applied during these years? Understanding the reason behind this year would be helpful for the company to improve its offer response rates. \n",
-    "\n",
-    "**Offer strategies**\n",
-    "\n",
-    "In general, sending discount offers through social media seem to be the most promising way for the company to get a higer response rate. This is especially important for male customers, because they tend to respond more to the discounts while other genders don't have such a big different response rate to bogos and discounts.  \n",
-    "\n",
-    "It's worthy mentioning that although discounts and social media had higher response rates in my analyis, people who received bogos actually spent slightly more than those who received discount and informational offers, and the amount of money spent by people from different channels was similar. This suggests that when trying to achieve a higher response rate, it is also important to factor in the cost of making these offers.  "
    ]
   },
   {
@@ -3310,9 +3287,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusions and Suggestions\n",
+    "\n",
+    "In order to increase revenues, it makes sense for the company to promote the response rate, because people who responded indeed seemed to spend more than those who didn't respond. Particularly, the response rate could be improved through two aspects, including (1) identify customers with certain demographic features and (2) customize offers for different demographic groups by adjusting offer types and channels to deliver the offers.\n",
+    "\n",
+    "**Demographic features**\n",
+    "\n",
+    "The company might want to primarily focus on female customers and people with higher income. They are more responsive to offers and they also spend more than other. \n",
+    "\n",
+    "Age didn't seem to be a good indicator for either the response rate or amount of money spent according to the data, although the company might want to consider that peole around 55-65 spend more on average when constructing strategies. \n",
+    "\n",
+    "Finally, people who became members during 2015-2017 responed more and spent more than those who became member in other years, suggesting that the company might want to investigate into what made these three years different from other years. Were there new markets developed or were there any strategies applied during these years? Understanding the reason behind this year would be helpful for the company to improve its offer response rates. \n",
+    "\n",
+    "**Offer strategies**\n",
+    "\n",
+    "In general, sending discount offers through social media seem to be the most promising way for the company to get a higer response rate. This is especially important for male customers, because they tend to respond more to the discounts while other genders don't have such a big different response rate to bogos and discounts.  \n",
+    "\n",
+    "It's worthy mentioning that although discounts and social media had higher response rates in my analyis, people who received bogos actually spent slightly more than those who received discount and informational offers, and the amount of money spent by people from different channels was similar. This suggests that when trying to achieve a higher response rate, it is also important to factor in the cost of making these offers.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Deployment / Communications\n",
     "\n",
-    "The findings of the above analysis will be put together into a blog post on Medium."
+    "The findings of the above analysis will be put together into a blog post on my [Medium](https://medium.com/@jingxie_19486/how-can-companies-increase-their-revenues-by-giving-offers-8233f04063c5)."
    ]
   }
  ],
@@ -3332,7 +3332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
